--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,11 @@
   --foreground: #171717;
 }
 
+.dark {
+  --background: #0a0a0a;
+  --foreground: #ededed;
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -20,13 +25,6 @@ h1, h2, h3, h4, h5, h6 {
 
 p, li {
   font-family: var(--font-lora), serif;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
 }
 
 body {
